gitops/apps/nicpublicdocs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicpublicdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nicpublicdocs
  template:
    metadata:
      labels:
        app: nicpublicdocs
    spec:
      containers:
        - name: nicpublicdocs
          image: k3d-local-registry:5000/nicpublicdocs:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
