gitops/apps/nicpublicdocs/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nicpublicdocs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: placeholder.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nicpublicdocs
                port:
                  number: 80
